[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/gooball.png" type="Texture" id=1]
[ext_resource path="res://scripts/rangedAttack.gd" type="Script" id=2]


[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[node name="rangedAttack" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -0.5 )
scale = Vector2( 0.6, 0.6 )

[node name="ray1" type="RayCast2D" parent="."]
position = Vector2( 8, -6.5 )
enabled = true
cast_to = Vector2( 0, 12 )

[node name="ray2" type="RayCast2D" parent="."]
position = Vector2( -8, -6.5 )
enabled = true
cast_to = Vector2( 0, 12 )

[node name="ray3" type="RayCast2D" parent="."]
position = Vector2( -6, -8.5 )
enabled = true
cast_to = Vector2( 12, 0 )

[node name="ray4" type="RayCast2D" parent="."]
position = Vector2( -6, 7.5 )
enabled = true
cast_to = Vector2( 12, 0 )
[connection signal="body_entered" from="." to="." method="_on_rangedAttack_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
